--- a/src/templates/products/categories.html
+++ b/src/templates/products/categories.html
@@ -80,9 +80,9 @@
                             <div class="product__item">
                                 <div class="product__item__pic set-bg" data-setbg="{{ ctgy.image.url }}">
                                     <ul class="product__item__pic__hover">
-                                        <li><a href="#"><i class="fa fa-heart"></i></a></li>
+                                        <li><a href="{% url 'products:add_to_favorites' ctgy.slug %}"><i class="fa fa-heart"></i></a></li>
                                         <li><a href="{% url 'products:product_detail' ctgy.slug %}"><i class="fa fa-retweet"></i></a></li>
-                                        <li><a href="#"><i class="fa fa-shopping-cart"></i></a></li>
+                                        <li><a href="{% url 'orders:add_to_cart' ctgy.slug %}"><i class="fa fa-shopping-cart"></i></a></li>
                                     </ul>
                                 </div>
                                 <div class="product__item__text">
