--- a/src/templates/products/search_product.html
+++ b/src/templates/products/search_product.html
@@ -64,9 +64,9 @@
                             <div class="product__item">
                                 <div class="product__item__pic set-bg" data-setbg="{{ search.image.url }}">
                                     <ul class="product__item__pic__hover">
-                                        <li><a href="#"><i class="fa fa-heart"></i></a></li>
+                                        <li><a href="{% url 'products:add_to_favorites' search.slug %}"><i class="fa fa-heart"></i></a></li>
                                         <li><a href="{% url 'products:product_detail' search.slug %}"><i class="fa fa-retweet"></i></a></li>
-                                        <li><a href="#"><i class="fa fa-shopping-cart"></i></a></li>
+                                        <li><a href="{% url 'orders:add_to_cart' search.slug %}"><i class="fa fa-shopping-cart"></i></a></li>
                                     </ul>
                                 </div>
                                 <div class="product__item__text">
